<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#66FFFF"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="113dp"
        android:gravity="center"
        android:text="@string/register_instructions"
        android:textSize="15sp" />
    <EditText
        android:id="@+id/register_email"
        style="@style/register.edit.text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:ems="10"
        android:hint="@string/register_email_description"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/register_password"
        style="@style/register.edit.text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/register_email"
        android:ems="10"
        android:hint="@string/register_password_description"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/register_password_confirm"
        style="@style/register.edit.text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/register_password"
        android:ems="10"
        android:hint="@string/register_confirm_description"
        android:inputType="textPassword" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_password_confirm"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_register_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="register"
            android:text="@string/button_register" />

        <Button
            android:id="@+id/button_cancel_register_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/button_register_form"
            android:onClick="cancel"
            android:text="@string/button_cancel" />
    </RelativeLayout>

</RelativeLayout>