<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:background="#606060"         
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dp"
    android:gravity="center"
    android:shrinkColumns="*"  
    android:stretchColumns="*">

    <!-- App Title -->
    <TextView
        android:id="@+id/link_to_register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/appTitle"
        android:textColor="#FFF"
        android:textSize="35sp" />

   <!-- Login Box -->
   <TableRow 
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:background="#66FFFF"
        android:layout_marginBottom="2dp">
        
		<EditText android:id="@+id/email"
		    style="@style/login.edit.text"
			android:layout_weight="1"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="5dip"	    
		    android:singleLine="true"
		    android:hint="@string/edit_login_email"/>
     </TableRow>
     
	<TableRow 
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:background="#66FFFF"
        android:layout_marginBottom="2dp">
		
		<EditText android:id="@+id/password"
	       	style="@style/login.edit.text"
	       	android:layout_weight="1"
         	android:layout_height="wrap_content"
         	android:layout_marginTop="5dip"
         	android:singleLine="true"
         	android:inputType="textPassword"
         	android:hint="@string/edit_login_password" />
	</TableRow>

	<TableRow 
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="#66FFFF"
        android:layout_marginBottom="2dp">
	   
	    <Button android:id="@+id/button_login"
	          android:layout_weight="1"
	          android:layout_height="wrap_content"
	          android:text="@string/button_login"			          
	          android:onClick="login">			        
	    </Button>	    
	   
	    <Button android:id="@+id/button_register"
	          android:layout_weight="1"
	          android:layout_height="wrap_content"
	          android:text="@string/button_register"
	          android:gravity="center"
	          android:textColor="#000000"
	          android:onClick="register">			        
	    </Button>	    
   	</TableRow>   
   		
</TableLayout>


